src/objects/Update_Portfolio_batch__c.object
<CustomObject>
    <fields>
        <fullName>Accion__c</fullName>
        <label>Accion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asignado__c</fullName>
        <label>Asignado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Rol__c</fullName>
        <label>Codigo Rol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_Rol__c</fullName>
        <label>Descripcion Rol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_del_error__c</fullName>
        <label>Descripcion del error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Alta__c</fullName>
        <label>Fecha Alta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Baja__c</fullName>
        <label>Fecha Baja</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nombre_y_Apellido__c</fullName>
        <label>Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hayError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hayError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>idClienteLegado__c</fullName>
        <label>idClienteLegado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Update Portfolio batch</label>
    <nameField>
        <label>Nombre de Update Portfolio batch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Update Portfolios batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>